# cnv

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  tailwind.config.js
apps/authentication/: apps.py  forms.py  permissions.py  urls.py
apps/base/: apps.py
apps/cattle/: forms.py  urls.py  views.py
apps/dashboard/: apps.py  urls.py  views.py
apps/health/: admin.py  forms.py  urls.py
apps/locations/: forms.py  urls.py
apps/nutrition/: apps.py  forms.py  urls.py
apps/partners/: admin.py  apps.py  forms.py  urls.py  views.py
apps/purchases/: admin.py  apps.py  forms.py  urls.py
apps/reproduction/: apps.py  forms.py  urls.py
apps/sales/: admin.py  apps.py  forms.py  urls.py
apps/tasks/: apps.py  forms.py  signals.py  urls.py
apps/website/: apps.py  urls.py
apps/weight/: apps.py  forms.py  urls.py
core/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
staticfiles/css/: styles.0291f6ccd036.css  styles.1d43cf38ad55.css  styles.7661b3bb9600.css  styles.c4d8a2d15935.css  styles.c6f914ad86cc.css  styles.css
tests/: conftest.py  test_utils.py  view_mixins.py
tests/authentication/: test_authentication_coverage.py  test_user.py  test_user_crud.py  test_user_deletion_validation.py
tests/base/: test_base_coverage.py  test_money.py  test_strict_deletion.py
tests/cattle/: test_age.py  test_cattle.py  test_cattle_coverage.py  test_cattle_list_filter.py  test_cattle_views_crud.py  test_delete_view_validation.py  test_deletion_validation.py  test_forms.py  test_model_extensions.py  test_search.py  test_services.py
tests/dashboard/: test_dashboard_withdrawal.py  test_views.py
tests/health/: test_event_crud.py  test_event_list.py  test_event_trash.py  test_event_views_coverage.py  test_health_coverage.py  test_medication_protection.py  test_medication_views_coverage.py  test_models.py  test_services.py
tests/locations/: conftest.py  test_location_coverage.py  test_location_views.py  test_models.py  test_movement_coverage.py  test_services.py
tests/models/: test_model_methods.py
tests/nutrition/: test_ingredient_views_coverage.py  test_nutrition_coverage.py  test_nutrition_crud_views.py  test_nutrition_models.py  test_nutrition_services.py  test_nutrition_trash_services.py  test_nutrition_views.py
tests/purchases/: test_forms.py  (+5 more)
(+272 files in other folders)
