[project]
name = "CNV"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Junior Fenker Debastiani", email = "rjdebastiani@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "psycopg[binary] (>=3.2.13,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "whitenoise (>=6.6.0,<7.0.0)",
    "django-rosetta (>=0.10.3,<0.11.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "Pillow (>=10.0.0,<11.0.0)",
    "djhtml (>=3.0.10,<4.0.0)"
]

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0"

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''
/(
    \.git
  | \.venv
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88





[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
isort = "<6.0.0"
pre-commit = "^4.4.0"
pytest = "^9.0.1"
pytest-django = "^4.11.1"
pytest-cov = "^6.0.0"
model-bakery = "^1.20.5"
flake8 = "^7.3.0"
mypy = "^1.19.0"
pylint = "<4.0.0"
autoflake8 = "^0.4.1"
pylint-django = "^2.6.1"
pytest-xdist = "^3.6.1"
djangorestframework-stubs = "^3.16.6"
djhtml = "^3.0.10"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "--reuse-db"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

